--- a/EC_Websites/static/styles/main.css
+++ b/EC_Websites/static/styles/main.css
@@ -17,6 +17,7 @@ h6:hover > .anchorjs-link {
 /* 设置 banner(横幅，旗帜) 的样式 */
 .banner {
   height: 100%;
+  z-index: -5;
   position: relative;
   overflow: hidden;
   cursor: default;
@@ -234,38 +235,54 @@ h6:hover > .anchorjs-link {
 }
 
 
-
+/* 设置 footer 内容区域的样式，包括内边距和文本居中对齐 */
 .footer-inner {
   padding: 3rem 0 1rem 0;
   text-align: center;
 }
+
+/* 设置 footer 内除第一个子元素外的其他子元素的样式，包括间距和字体大小 */
 .footer-inner > div:not(:first-child) {
   margin: 0.25rem 0;
   font-size: 0.85rem;
 }
+
+/* 设置用于显示统计信息的容器元素的样式，使用 flex 布局，并水平居中对齐 */
 .footer-inner .statistics {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
+
+/* 设置统计信息容器内的 span 元素的样式，使其自动填充剩余空间，并设置间距 */
 .footer-inner .statistics > span {
   flex: 1;
   margin: 0 0.25rem;
 }
+
+/* 设置统计信息容器内倒数第二个子元素的第一个子元素的右对齐样式 */
 .footer-inner .statistics > *:nth-last-child(2):first-child {
   text-align: right;
 }
+
+/* 设置统计信息容器内倒数第二个子元素之后的所有子元素的左对齐样式 */
 .footer-inner .statistics > *:nth-last-child(2):first-child ~ * {
   text-align: left;
 }
+
+/* 设置用于显示备案信息的容器元素的样式，使用 flex 布局，并水平居中对齐 */
 .footer-inner .beian {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
+
+/* 设置备案信息容器内子元素的间距 */
 .footer-inner .beian > * {
   margin: 0 0.25rem;
 }
+
+/* 设置备案信息中警徽图片的容器元素的样式，包括位置、溢出和 flex 布局 */
 .footer-inner .beian-police {
   position: relative;
   overflow: hidden;
@@ -273,35 +290,54 @@ h6:hover > .anchorjs-link {
   align-items: center;
   justify-content: left;
 }
+
+/* 设置备案信息中警徽图片的样式，包括间距和尺寸 */
 .footer-inner .beian-police img {
   margin-right: 3px;
   width: 1rem;
   height: 1rem;
   margin-bottom: 0.1rem;
 }
+
+/* 在视口宽度小于等于 424px 时应用的样式 */
 @media (max-width: 424px) {
+  /* 调整统计信息容器元素的布局为垂直方向 */
   .footer-inner .statistics {
     flex-direction: column;
   }
+  
+  /* 调整统计信息容器内倒数第二个子元素的对齐方式为居中 */
   .footer-inner .statistics > *:nth-last-child(2):first-child {
     text-align: center;
   }
+  
+  /* 调整统计信息容器内倒数第二个子元素之后的所有子元素的对齐方式为居中 */
   .footer-inner .statistics > *:nth-last-child(2):first-child ~ * {
     text-align: center;
   }
+  
+  /* 调整备案信息容器元素的布局为垂直方向 */
   .footer-inner .beian {
     flex-direction: column;
   }
+  
+  /* 调整备案信息中警徽图片的容器元素的对齐方式为居中 */
   .footer-inner .beian .beian-police {
     justify-content: center;
   }
+  
+  /* 调整备案信息容器内倒数第二个子元素的对齐方式为居中 */
   .footer-inner .beian > *:nth-last-child(2):first-child {
     text-align: center;
   }
+  
+  /* 调整备案信息容器内倒数第二个子元素之后的所有子元素的对齐方式为居中 */
   .footer-inner .beian > *:nth-last-child(2):first-child ~ * {
     text-align: center;
   }
 }
+
+/* 用于添加一些额外的空白块，以实现一些布局效果 */
 sup > a::before,
 .footnote-text::before {
   display: block;
@@ -311,10 +347,14 @@ sup > a::before,
   width: 1px;
   visibility: hidden;
 }
+
+/* 设置超链接和注释文本之前的空白块的样式 */
 sup > a::before,
 .footnote-text::before {
   display: inline-block;
 }
+
+/* 设置注释列表项之前的空白块的样式 */
 .footnote-item::before {
   display: block;
   content: "";
@@ -323,75 +363,113 @@ sup > a::before,
   width: 1px;
   visibility: hidden;
 }
+
+/* 设置注释列表的样式，包括去除列表样式、设置计数器和内边距 */
 .footnote-list ol {
   list-style-type: none;
   counter-reset: sectioncounter;
   padding-left: 0.5rem;
   font-size: 0.95rem;
 }
+
+/* 设置注释列表项的样式，包括添加计数器标记和设置间距 */
 .footnote-list ol li:before {
   font-family: "Helvetica Neue", monospace, "Monaco";
   content: "[" counter(sectioncounter) "]";
   counter-increment: sectioncounter;
 }
+
+/* 设置注释列表项之间的间距 */
 .footnote-list ol li+li {
   margin-top: 0.5rem;
 }
+
+/* 设置注释文本的样式，包括内边距 */
 .footnote-text {
   padding-left: 0.5em;
 }
+
+
+
+/* 设置导航栏的样式，包括背景颜色、字体大小和阴影效果 */
 .navbar {
   background-color: rgba(0,0,0,0.5);
   font-size: 0.875rem;
   box-shadow: 0 2px 5px 0 rgba(230, 208, 4, 0.16), 0 2px 10px 0 rgba(195, 219, 13, 0.12);
   -webkit-box-shadow: 0 2px 5px 0 rgba(230, 220, 19, 0.16), 0 2px 10px 0 rgba(207, 231, 19, 0.12);
 }
+
+/* 设置导航栏品牌文字的颜色 */
 .navbar .navbar-brand {
   color: var(--navbar-text-color);
 }
+
+/* 设置导航栏切换按钮中动画图标的颜色 */
 .navbar .navbar-toggler .animated-icon span {
   background-color: var(--navbar-text-color);
 }
+
+/* 设置导航栏中菜单链接的样式，包括颜色和过渡效果 */
 .navbar .nav-item .nav-link {
   display: block;
   color: var(--navbar-text-color);
   transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 }
+
+/* 设置导航栏中菜单链接的鼠标悬停样式 */
 .navbar .nav-item .nav-link:hover {
   color: var(--link-hover-color);
 }
+
+/* 设置导航栏中菜单链接的聚焦样式 */
 .navbar .nav-item .nav-link:focus {
   color: var(--navbar-text-color);
 }
+
+/* 设置导航栏中菜单链接中图标的样式 */
 .navbar .nav-item .nav-link i {
   font-size: 0.875rem;
 }
+
+/* 设置导航栏中菜单链接中唯一子元素图标的样式 */
 .navbar .nav-item .nav-link i:only-child {
   margin: 0 0.2rem;
 }
+
+/* 设置导航栏切换按钮的样式 */
 .navbar .navbar-toggler {
   border-width: 0;
   outline: 0;
 }
+
+/* 当导航栏滚动时应用的样式 */
 .navbar.scrolling-navbar {
   will-change: background, padding;
   -webkit-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
   transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
 }
+
+/* 在视口宽度大于等于 600px 时应用的样式 */
 @media (min-width: 600px) {
+  /* 调整滚动导航栏的上内边距和下内边距 */
   .navbar.scrolling-navbar {
     padding-top: 12px;
     padding-bottom: 12px;
   }
+  /* 设置导航栏中菜单项的过渡效果持续时间 */
   .navbar.scrolling-navbar .navbar-nav > li {
     -webkit-transition-duration: 1s;
     transition-duration: 1s;
   }
 }
+
+/* 当滚动导航栏收缩时应用的样式 */
 .navbar.scrolling-navbar.top-nav-collapse {
   padding-top: 5px;
   padding-bottom: 5px;
 }
+
+/* 设置下拉菜单的样式 */
 .navbar .dropdown-menu {
   font-size: 0.875rem;
   color: var(--navbar-text-color);
@@ -401,30 +479,44 @@ sup > a::before,
   -webkit-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
   transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
 }
+
+/* 在视口宽度小于等于 991.98px 时应用的样式 */
 @media (max-width: 991.98px) {
+  /* 设置下拉菜单文本居中对齐 */
   .navbar .dropdown-menu {
     text-align: center;
   }
 }
+
+/* 设置下拉菜单项的样式 */
 .navbar .dropdown-item {
   color: var(--navbar-text-color);
 }
+
+/* 设置下拉菜单项的鼠标悬停和聚焦样式 */
 .navbar .dropdown-item:hover,
 .navbar .dropdown-item:focus {
   color: var(--link-hover-color);
   background-color: rgba(0,0,0,0.1);
 }
+
+/* 在视口宽度大于等于 992px 时应用的样式 */
 @media (min-width: 992px) {
+  /* 当鼠标悬停在下拉菜单时显示下拉菜单 */
   .navbar .dropdown:hover > .dropdown-menu {
     display: block;
   }
+  /* 禁用下拉菜单切换按钮的点击事件 */
   .navbar .dropdown > .dropdown-toggle:active {
     pointer-events: none;
   }
+  /* 调整下拉菜单的定位 */
   .navbar .dropdown-menu {
     top: 95%;
   }
 }
+
+/* 设置导航栏切换按钮的动画效果 */
 .navbar .animated-icon {
   width: 30px;
   height: 20px;
@@ -440,6 +532,8 @@ sup > a::before,
   transition: 0.5s ease-in-out;
   cursor: pointer;
 }
+
+/* 设置导航栏切换按钮动画图标的样式 */
 .navbar .animated-icon span {
   display: block;
   position: absolute;
@@ -458,6 +552,8 @@ sup > a::before,
   transition: 0.25s ease-in-out;
   background: #fff;
 }
+
+/* 设置导航栏切换按钮动画图标的三个条纹的位置 */
 .navbar .animated-icon span:nth-child(1) {
   top: 0;
 }
@@ -467,6 +563,8 @@ sup > a::before,
 .navbar .animated-icon span:nth-child(3) {
   top: 20px;
 }
+
+/* 设置打开状态下导航栏切换按钮动画图标的样式 */
 .navbar .animated-icon.open span:nth-child(1) {
   top: 11px;
   -webkit-transform: rotate(135deg);
@@ -485,6 +583,8 @@ sup > a::before,
   -o-transform: rotate(-135deg);
   transform: rotate(-135deg);
 }
+
+/* 当浏览器支持模糊效果时应用的样式 */
 @supports (-webkit-backdrop-filter: blur(3px)) or (backdrop-filter: blur(3px)) {
   .navbar .dropdown-collapse,
   .top-nav-collapse,
@@ -494,6 +594,8 @@ sup > a::before,
     backdrop-filter: blur(3px);
   }
 }
+
+/* 当浏览器不支持模糊效果时应用的样式 */
 @supports not ((-webkit-backdrop-filter: blur(3px)) or (backdrop-filter: blur(3px))) {
   .navbar .dropdown-collapse,
   .top-nav-collapse,
@@ -501,36 +603,54 @@ sup > a::before,
     background: #2f4154;
   }
 }
+
+/* 在视口宽度小于等于 767px 时应用的样式 */
 @media (max-width: 767px) {
+  /* 调整导航栏字体大小和行高 */
   .navbar {
     font-size: 1rem;
     line-height: 2.5rem;
   }
 }
+
+
+
+/* 设置横幅文本的样式，包括颜色、最大宽度和换行 */
 .banner-text {
   color: var(--subtitle-color);
   max-width: calc(960px - 6rem);
   width: 80%;
   overflow-wrap: break-word;
 }
+
+/* 设置横幅文本中类型光标的样式 */
 .banner-text .typed-cursor {
   margin: 0 0.2rem;
 }
+
+/* 在视口宽度小于等于 767px 时应用的样式 */
 @media (max-width: 767px) {
+  /* 调整字幕和类型光标的字体大小 */
   #subtitle,
   .typed-cursor {
     font-size: 1.5rem;
   }
 }
+
+/* 在视口宽度小于等于 575px 时应用的样式 */
 @media (max-width: 575px) {
+  /* 调整横幅文本的字体大小 */
   .banner-text {
     font-size: 0.9rem;
   }
+  /* 调整字幕和类型光标的字体大小 */
   #subtitle,
   .typed-cursor {
     font-size: 1.35rem;
   }
 }
+
+/* 设置模态框内容的样式 */
 .modal-dialog .modal-content {
   background-color: var(--board-bg-color);
   border: 0;
@@ -538,29 +658,43 @@ sup > a::before,
   -webkit-box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18), 0 4px 15px 0 rgba(0,0,0,0.15);
   box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18), 0 4px 15px 0 rgba(0,0,0,0.15);
 }
+
+/* 设置模态框头部的样式 */
 .modal-dialog .modal-content .modal-header {
   border-bottom-color: var(--line-color);
   transition: border-bottom-color 0.2s ease-in-out;
 }
+
+/* 设置关闭按钮的样式 */
 .close {
   color: var(--text-color);
 }
+
+/* 设置关闭按钮的鼠标悬停样式 */
 .close:hover {
   color: var(--link-hover-color);
 }
+
+/* 设置关闭按钮的聚焦样式 */
 .close:focus {
   outline: 0;
 }
+
+/* 设置模态框头部的样式 */
 .modal-dialog .modal-content .modal-header {
   border-top-left-radius: 0.125rem;
   border-top-right-radius: 0.125rem;
   border-bottom: 1px solid #dee2e6;
 }
+
+/* 设置材料设计表单的样式 */
 .md-form {
   position: relative;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
+
+/* 设置材料设计表单输入框的样式 */
 .md-form input[type] {
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
@@ -573,37 +707,36 @@ sup > a::before,
   box-shadow: none;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
 }
+
+/* 设置材料设计表单输入框的聚焦样式 */
 .md-form input[type]:focus:not([readonly]) {
   border-bottom: 1px solid #4285f4;
   -webkit-box-shadow: 0 1px 0 0 #4285f4;
   box-shadow: 0 1px 0 0 #4285f4;
 }
-.md-form input[type]:focus:not([readonly]) + label {
-  color: #4285f4;
-}
+
+/* 设置材料设计表单输入框的有效状态样式 */
 .md-form input[type].valid,
 .md-form input[type]:focus.valid {
   border-bottom: 1px solid #00c851;
   -webkit-box-shadow: 0 1px 0 0 #00c851;
   box-shadow: 0 1px 0 0 #00c851;
 }
-.md-form input[type].valid + label,
-.md-form input[type]:focus.valid + label {
-  color: #00c851;
-}
+
+/* 设置材料设计表单输入框的无效状态样式 */
 .md-form input[type].invalid,
 .md-form input[type]:focus.invalid {
   border-bottom: 1px solid #f44336;
   -webkit-box-shadow: 0 1px 0 0 #f44336;
   box-shadow: 0 1px 0 0 #f44336;
 }
-.md-form input[type].invalid + label,
-.md-form input[type]:focus.invalid + label {
-  color: #f44336;
-}
+
+/* 设置材料设计表单输入框的验证状态样式 */
 .md-form input[type].validate {
   margin-bottom: 2.5rem;
 }
+
+/* 设置材料设计表单输入框的基本样式 */
 .md-form input[type].form-control {
   height: auto;
   padding: 0.6rem 0 0.4rem 0;
@@ -612,6 +745,8 @@ sup > a::before,
   background-color: transparent;
   border-radius: 0;
 }
+
+/* 设置材料设计表单标签的样式 */
 .md-form label {
   font-size: 0.8rem;
   position: absolute;
@@ -621,13 +756,19 @@ sup > a::before,
   cursor: text;
   transition: color 0.2s ease-out;
 }
+
+
+/* 覆盖模态框打开时的样式，避免滚动条和右侧导航栏之间的冲突 */
 .modal-open[style] {
   padding-right: 0 !important;
   overflow: auto;
 }
+/* 在模态框打开时，调整右侧导航栏的样式 */
 .modal-open[style] #navbar[style] {
   padding-right: 1rem !important;
 }
+
+/* 设置页面加载进度条的样式 */
 #nprogress .bar {
   height: 3px !important;
   background-color: #29d !important;
@@ -635,11 +776,15 @@ sup > a::before,
 #nprogress .peg {
   box-shadow: 0 0 14px #29d, 0 0 8px #29d !important;
 }
+
+/* 在视口宽度小于等于 575px 时隐藏加载进度条 */
 @media (max-width: 575px) {
   #nprogress .bar {
     display: none;
   }
 }
+
+/* 设置禁用 JavaScript 警告的样式 */
 .noscript-warning {
   background-color: #f55;
   color: #fff;
@@ -653,6 +798,8 @@ sup > a::before,
   width: 100%;
   z-index: 99;
 }
+
+/* 设置分页导航的样式 */
 .pagination {
   margin-top: 3rem;
   justify-content: center;
@@ -674,19 +821,25 @@ sup > a::before,
 .pagination .page-number {
   margin: 0 0.05rem;
 }
+/* 设置分页导航的悬停和当前页样式 */
 .pagination .page-number:hover,
 .pagination .current {
   transition: background-color 0.2s ease-in-out;
   background-color: var(--link-hover-bg-color);
 }
+/* QR码触发器 */
 .qr-trigger {
   cursor: pointer;
   position: relative;
 }
+
+/* 鼠标悬停时显示QR码图片 */
 .qr-trigger:hover .qr-img {
   display: block;
   transition: all 0.3s;
 }
+
+/* QR码图片 */
 .qr-img {
   max-width: 12rem;
   position: absolute;
@@ -697,6 +850,8 @@ sup > a::before,
   background-color: transparent;
   box-shadow: 0 0 20px -5px rgba(158,158,158,0.2);
 }
+
+/* 滚动至底部的提示条 */
 .scroll-down-bar {
   position: absolute;
   width: 100%;
@@ -705,6 +860,8 @@ sup > a::before,
   cursor: pointer;
   bottom: 0;
 }
+
+/* 滚动至底部的提示条图标 */
 .scroll-down-bar i.iconfont {
   font-size: 2rem;
   font-weight: bold;
@@ -715,6 +872,8 @@ sup > a::before,
   transform: translateZ(0);
   animation: scroll-down 1.5s infinite;
 }
+
+/* 返回顶部按钮 */
 #scroll-top-button {
   position: fixed;
   z-index: 99;
@@ -730,11 +889,15 @@ sup > a::before,
   align-items: center;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
 }
+
+/* 返回顶部按钮图标 */
 #scroll-top-button i {
   font-size: 32px;
   margin: auto;
   color: var(--sec-text-color);
 }
+
+/* 返回顶部按钮图标悬停/激活 */
 #scroll-top-button:hover i,
 #scroll-top-button:active i {
   animation-name: scroll-top;
@@ -745,74 +908,111 @@ sup > a::before,
   animation-fill-mode: forwards;
   animation-direction: alternate;
 }
+
+/* 本地搜索结果标题 */
 #local-search-result .search-list-title {
   border-left: 3px solid #0d47a1;
 }
+
+/* 本地搜索结果内容 */
 #local-search-result .search-list-content {
   padding: 0 1.25rem;
 }
+
+/* 本地搜索结果关键词 */
 #local-search-result .search-word {
   color: #ff4500;
 }
+
+/* 目录 */
 #toc {
   visibility: hidden;
 }
+
+/* 目录标题 */
 .toc-header {
   margin-bottom: 0.5rem;
   font-weight: bold;
   line-height: 1.2;
 }
+
 .toc-header,
 .toc-header > i {
   font-size: 1.25rem;
 }
+
+/* 目录内容 */
 .toc-body {
   max-height: 75vh;
   overflow-y: auto;
   overflow: -moz-scrollbars-none;
   -ms-overflow-style: none;
 }
+
+/* 目录内容列表 */
 .toc-body ol {
   list-style: none;
   padding-inline-start: 1rem;
 }
+
+/* 目录滚动条 */
 .toc-body::-webkit-scrollbar {
   display: none;
 }
+
+/* 目录列表 */
 .tocbot-list {
   position: relative;
 }
+
+/* 目录列表有序列表 */
 .tocbot-list ol {
   list-style: none;
   padding-left: 1rem;
 }
+
+/* 目录链接 */
 .tocbot-list a {
   font-size: 0.95rem;
 }
+
+/* 目录链接 */
 .tocbot-link {
   color: var(--text-color);
 }
+
+/* 目录激活链接 */
 .tocbot-active-link {
   font-weight: bold;
   color: var(--link-hover-color);
 }
+
+/* 目录折叠状态 */
 .tocbot-is-collapsed {
   max-height: 0;
 }
+
+/* 目录可折叠 */
 .tocbot-is-collapsible {
   overflow: hidden;
   transition: all 0.3s ease-in-out;
 }
+
+/* 目录列表项 */
 .toc-list-item {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+/* 目录激活列表项 */
 .toc-list-item.is-active-li::before {
   height: 1rem;
   margin: 0.25rem 0;
   visibility: visible;
 }
+
+/* 目录列表项前缀 */
 .toc-list-item::before {
   width: 0.15rem;
   height: 0.2rem;
@@ -825,6 +1025,10 @@ sup > a::before,
   visibility: hidden;
   transition: height 0.1s ease-in-out, margin 0.1s ease-in-out, visibility 0.1s ease-in-out;
 }
+
+
+
+
 .sidebar {
   position: -webkit-sticky;
   position: sticky;
@@ -1080,6 +1284,9 @@ i.iconfont {
   transition-timing-function: ease-in-out;
   border-radius: 0.2rem;
 }
+
+
+
 @-moz-keyframes fade-in-up {
   from {
     opacity: 0;
@@ -1240,6 +1447,9 @@ i.iconfont {
     transform: translateY(0);
   }
 }
+
+
+
 .index-card {
   margin-bottom: 2.5rem;
 }
