post-details-adjusted

--- a/EC/Apps/forum/templates/user.html
+++ b/EC/Apps/forum/templates/user.html
@@ -11,17 +11,17 @@
 
     <link rel="stylesheet" href="{% static 'css/responsive.css'%}" type="text/css">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css'%}" type="text/css">
-    <link rel="stylesheet"href="{% static 'css/style.css' %}"  type="text/css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"  type="text/css">
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" type="text/css"> 
 </head>
 
 <body>
     <section class="header-descriptin329">
         <div class="container">
-            <h3>All User Question</h3>
+            <h3>All User Posts</h3>
             <ol class="breadcrumb breadcrumb839">
                 <li><a href="#">Home</a></li>
-                <li class="active">All User Question</li>
+                <li class="active">All User Posts</li>
             </ol>
         </div>
     </section>
@@ -29,56 +29,34 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-9 user-profile328903">
+
+                    {% for user_info in users_info %}
                         <div class="about-user2039">
                            <div class="row">
-                           <div class="col-md-1">
-                            <div class="user-image2939303"> <img src="image/images.png" alt="Image"> </div>
-                               </div>
-                               <div class="col-md-11">
-                            <div class="user-description3903"> <a href="user_question.html">Ask Ahmed Hasan</a> <span class="badge229">
-                        <a href="#">Mid</a></span>
-                                <p>Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis. Curabitur vitae velit in neque dictum blandit. Proin in iaculis neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur vitae velit in neque dictum blandit. Curabitur vitae velit in neque dictum blandit.Curabitur vitae velit in neque dictum blandit. </p>
-                            </div>
-                            <div class="user-social3903">
-                                <p>Follow : <span>
-                        <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-                               </span> </p>
+
+
+                                <div class="col-md-1">
+                                    <div class="user-image2939303"> 
+                                        <img src="{% static "imgs/images.png"%}" alt="Image"> 
                                     </div>
-                                       </div>
+                               </div>
+
+                               <div class="col-md-11">
+                                    <div class="user-description3903"> 
+                                        <a href="user_question.html">{{ user_info.name }}</a>
+                                        <span class="badge229">
+                                            <a href="#">{{ user_info.rank }}</a>
+                                        </span>
+                                        <p>{{ user_info.main_contents }}</p>
+                                    </div>
+                                </div>
+
+
                             </div>
                         </div>
-                      <div class="about-user2039">
-                           <div class="row">
-                           <div class="col-md-1">
-                            <div class="user-image2939303"> <img src="image/images.png" alt="Image"> </div>
-                               </div>
-                               <div class="col-md-11">
-                            <div class="user-description3903"> <a href="user_question.html">Ask Ahmed Hasan</a> <span class="badge229">
-                        <a href="#">Beginner</a></span>
-                                <p>Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis. Curabitur vitae velit in neque dictum blandit. Proin in iaculis neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur vitae velit in neque dictum blandit. Curabitur vitae velit in neque dictum blandit.Curabitur vitae velit in neque dictum blandit. </p>
-                            </div>
-                            <div class="user-social3903">
-                                <p>Follow : <span>
-                        <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-                               </span> </p>
-                                    </div>
-                                       </div>
-                            </div>
-                        </div>
+                    {% endfor %}
+                    
                 </div>
-                
             </div>
         </div>
     </section>
