--- a/EC/Apps/forum/templates/post_details.html
+++ b/EC/Apps/forum/templates/post_details.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="{% static 'css/responsive.css'%}" type="text/css">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css'%}" type="text/css">
-    <link rel="stylesheet"href="{% static 'css/style.css' %}"  type="text/css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"  type="text/css">
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" type="text/css"> 
 </head>
 
@@ -32,10 +32,10 @@
     <section class="main-content920">
         <div class="container">
             <div class="row">
-
                 <div class="col-md-9">
-                    <div class="post-details">
 
+                    <div class="post-details">
+                        <!-- 这里是详细的分享内容 -->
                         <div class="details-header923">
                             <div class="row">
                                 <div class="col-md-8">
@@ -45,7 +45,6 @@
                                 </div>
                             </div>
                         </div>
-
 
                         <div class="post-details-info1982">
                             <p>Lorem ipsum dolor sit amet</p>
@@ -77,7 +76,9 @@
 
                     </div>
 
+
                     <div class="author-details8392">
+                        <!-- 这里是作者的信息 -->
                         <div class="author-img202l"> 
                             <img src="{% static 'imgs/images.png'%}" alt="image">
                             <div class="au-image-overlay text-center"> 
@@ -87,17 +88,19 @@
                                 </a> 
                             </div>
                         </div>
-                   <h5>About the Author</h5>
-                    <p>Description</p>
+                        <h5>About the Author</h5>
+                        <p>Description</p>
+                    </div>
                     
-                </span> </div>
-
                     <div class="comment-list12993">
+                        <!-- 这里是针对分享的评论以及对评论的评论 -->
                         <div class="container">
                             <div class="row">
                                 <div class="comments-container">
+                                    
                                     <ul id="comments-list" class="comments-list">
-
+                                        
+                                        {% for main_comment in main_comments %}
                                         <li>
                                             <!-- main-level针对的是对整个post的评论 -->
                                              <div class="comment-main-level">
@@ -105,57 +108,33 @@
                                                 <div class="comment-avatar"><img src="{% static 'imgs/images.png'%}" alt=""></div>
                                                 <!-- Contenedor del Comentario -->
                                                 <div class="comment-box">
-                                                    <div class="comment-head">
-                                                        <h6 class="comment-name"><a href="#">Lorena Rojero</a></h6> <span><i class="fa fa-clock-o" aria-hidden="true"> January 15 , 2014 at 10:00 pm</i></span> <i class="fa fa-reply"></i> <i class="fa fa-heart"></i> </div>
-                                                    <div class="comment-content"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo? </div>
+                                                    <div class="comment-head" >
+                                                        <h6 class="comment-name"><a href="#">Lorena Rojero</a></h6> 
+                                                        <span><i class="fa fa-clock-o" aria-hidden="true"> January 15 , 2014 at 10:00 pm</i></span> 
+                                                        <i class="fa fa-reply"></i> <i class="fa fa-heart"></i> 
+                                                    </div>
+                                                    <div class="comment-content"> {{ main_comment.main }} </div>
                                                 </div>
                                             </div>
                                                 
-                                      
+                                            
                                             <ul class="comments-list reply-list">
                                                 <!-- 这里的comments-list, reply-list表示的是对本评论的回复 -->
+                                                {% for reply in main_comment.replys %}
                                                 <li>
                                                     <div class="comment-avatar"><img src="{% static 'imgs/images.png'%}" alt=""></div>
                                                     <div class="comment-box">
                                                         <div class="comment-head">
-                                                            <h6 class="comment-name"><a href="#">Lorena Rojero</a></h6> <span><i class="fa fa-clock-o" aria-hidden="true"> January 15 , 2014 at 10:00 pm</i></span> <i class="fa fa-reply"></i> <i class="fa fa-heart"></i> </div>
-                                                        <div class="comment-content"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo? </div>
+                                                            <h6 class="comment-name"><a href="#">Lorena Rojero</a></h6>
+                                                             <span><i class="fa fa-clock-o" aria-hidden="true"> January 15 , 2014 at 10:00 pm</i></span> 
+                                                             <i class="fa fa-reply"></i> <i class="fa fa-heart"></i> </div>
+                                                        <div class="comment-content"> {{reply}} </div>
                                                     </div>
                                                 </li>
-
-                                                <li>
-                                                    <div class="comment-avatar"><img src="{% static 'imgs/images.png'%}" alt=""></div>
-                                                    <div class="comment-box">
-                                                        <div class="comment-head">
-                                                            <h6 class="comment-name by-author"><a href="#">Agustin Ortiz</a></h6> <span><i class="fa fa-clock-o" aria-hidden="true"> January 15 , 2014 at 10:00 pm</i></span> <i class="fa fa-reply"></i> <i class="fa fa-heart"></i> </div>
-                                                        <div class="comment-content"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo? </div>
-                                                    </div>
-                                                </li>
-
-                                                <li>
-                                                    <div class="comment-avatar"><img src="{% static 'imgs/images.png'%}" alt=""></div>
-                                                    <div class="comment-box">
-                                                        <div class="comment-head">
-                                                            <h6 class="comment-name"><a href="#">Lorena Rojero</a></h6> <span><i class="fa fa-clock-o" aria-hidden="true"> January 15 , 2014 at 10:00 pm</i></span> <i class="fa fa-reply"></i> <i class="fa fa-heart"></i> </div>
-                                                        <div class="comment-content"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo? </div>
-                                                    </div>
-                                                </li>
-
+                                                {% endfor %}
                                             </ul>
                                         </li>
-
-                                        <li>
-                                            <div class="comment-main-level">
-                                                <!-- Avatar -->
-                                                <div class="comment-avatar"><img src="{% static 'imgs/images.png'%}" alt=""></div>
-                                                <!-- Contenedor del Comentario -->
-                                                <div class="comment-box">
-                                                    <div class="comment-head">
-                                                        <h6 class="comment-name"><a href="#">Lorena Rojero</a></h6> <span><i class="fa fa-clock-o" aria-hidden="true"> January 15 , 2014 at 10:00 pm</i></span> <i class="fa fa-reply"></i> <i class="fa fa-heart"></i> </div>
-                                                    <div class="comment-content"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo? </div>
-                                                </div>
-                                            </div>
-                                        </li>
+                                        {% endfor %}
                                     </ul>
                                 </div>
                             </div>
@@ -164,6 +143,7 @@
 
 
                     <div class="comment289-box">
+                        <!-- 这里是给一个评论或评论评论的地方 -->
                         <h3>Leave A Reply</h3>
                             <div class="col-md-12">
                                 <div class="post9320-box">
