--- a/EC/Apps/accounts/templates/profile.html
+++ b/EC/Apps/accounts/templates/profile.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Profile</title>
-    <link rel="stylesheet" href="{% static 'css/signup_login.css' %}">
+    <title>Profile</title>
+    {% comment %} <link rel="stylesheet" href="{% static 'css/signup_login.css' %}"> {% endcomment %}
     <link rel="stylesheet" href="{% static 'css/msg_for_all.css' %}">
 </head>
 
 <body>
-    <h1>Edit Profile</h1>
-
+    <h1>Profile</h1>
+    
     {% if messages %}
     <div class="message-container">
       {% for message in messages %}
@@ -22,6 +22,7 @@
     </div>
     {% endif %}
 
+    <!-- 这里是主要部分，用于展示用户信息，修改用户信息 -->
     <form action="{% url 'accounts:change_profile' %}" method="post">
         {% csrf_token %}
 
@@ -30,44 +31,46 @@
         <br>
 
         <label for="username">name:</label>
-        <input type="text" id="username" name="username" placeholder="{{ profile.username }}">
+        <input type="text" id="username" name="username" placeholder="{{ username }}">
         <br>
-        
+
         <label for="email">Email:</label>
-        <span id="email">{{ profile.email }}</span>
+        <span id="email">{{ email }}</span>
         <br>
         
         <label for="gender">Gender:</label>
-        <input type="radio" id="male" name="gender" value="male" {% if profile.gender == 'male' %} checked {% endif %}>
+        <input type="radio" id="male" name="gender" value="male" {% if gender == 'male' %} checked {% endif %}>
         <label for="male">Male</label>
-        <input type="radio" id="female" name="gender" value="female" {% if profile.gender == 'female' %} checked {% endif %}>
+        <input type="radio" id="female" name="gender" value="female" {% if gender == 'female' %} checked {% endif %}>
         <label for="female">Female</label>
+        <input type="radio" id="female" name="gender" value="female" {% if gender == 'uncertain' %} checked {% endif %}>
+        <label for="female">Uncertain</label>
         <br>
 
         <label for="birthday">Birthday:</label>
-        <input type="date" id="birthday" name="birthday" value="{{ profile.birthday }}">
+        <input type="date" id="birthday" name="birthday" value="{{ birthday }}">
         <br>
 
         <label for="bio">Biography:</label>
         <br>
-        <textarea id="bio" name="bio" rows="4" cols="50" placeholder="{{ profile.bio }}"></textarea>
+        <textarea id="bio" name="bio" rows="4" cols="50" placeholder="{{ bio }}"></textarea>
         <br>
 
         <!-- 下面这部分只给看 -->
         <label for="likes">Likes:</label>
-        <span id="likes">{{ profile.likes|default_if_none:"0" }}</span>
+        <span id="likes">{{ likes }}</span>
         <br>
 
         <label for="liked_by">Liked By:</label>
-        <span id="liked_by">{{ profile.liked_by|default_if_none:"0" }}</span>
+        <span id="liked_by">{{ liked_by }}</span>
         <br>
 
         <label for="followers">Followers:</label>
-        <span id="followers">{{ profile.followers|default_if_none:"0" }}</span>
+        <span id="followers">{{ followers }}</span>
         <br>
 
         <label for="following">Following:</label>
-        <span id="following">{{ profile.following|default_if_none:"0" }}</span>
+        <span id="following">{{ following }}</span>
         <br>
 
         <input type="submit" value="Confirm">
