--- a/EC/Apps/forum/templates/forum_index.html
+++ b/EC/Apps/forum/templates/forum_index.html
@@ -58,11 +58,12 @@
                         <label for="tab3">Most Liked</label>
 
                         <input id="tab4" type="radio" name="tabs">
-                        <label for="tab4">No Comment/</label>
+                        <label for="tab4">No Comment</label>
                         
                         <input id="tab5" type="radio" name="tabs">
                         <label for="tab5">Riddles</label>
 
+                        <!-- 这个是用来写分享 -->
                         <input id="tab6" name="tabs" onclick="window.location.href='{% url 'forum:share' %}'">
                         <label for="tab6">Share sth.</label>
                         
